restart always db container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       - ./app/api/tmp:/var/lib/mysql
     ports:
       - 3306:3306
-    restart: unless-stopped
+    restart: always
     networks:
       - app-network
 
